--- a/ProjetIntegrateur/nbproject/project.properties
+++ b/ProjetIntegrateur/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projetintegrateur.ProjetIntegrateur
+main.class=projetintegrateur.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
