--- a/Spellington/nbproject/project.properties
+++ b/Spellington/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ca.qc.bdeb.info204.spellington.Spellington
+main.class=ca.qc.bdeb.info204.spellington.GameCore
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
